# FlowEngine

./: CMakeLists.txt  README.md  protocols.md
Common/: Common.vcxproj  Common.vcxproj.filters  Config.h  Encryptor.cpp  Encryptor.h  Exception.h  Logger.h  Protocol.h  Utils.h
Core/: ChatRoom.h  Core.vcxproj  Core.vcxproj.filters  Managers.h  MemoryPool.h  NpcapUtils.cpp  NpcapUtils.h  PacketHandler.h  Session.h  Statistics.h
MFC_Client/: LoginDlg.cpp  LoginDlg.h  MFCClient.aps  MFCClient.rc  MFC_Client.cpp  MFC_Client.h  MFC_Client.vcxproj  MFC_Client.vcxproj.filters  MFC_ClientDoc.cpp  MFC_ClientDoc.h  MFC_ClientView.cpp  MFC_ClientView.h  MainFrm.cpp  Resource.h  ServerConnector.cpp  ServerConnector.h
Networking/: Networking.cpp  Networking.vcxproj  Networking.vcxproj.filters
NexusCore/: NexusCore.sln  NexusCore.vcxproj
NexusCore.Tests.Common/: CommonTests.cpp  NexusCore.Tests.Common.vcxproj  NexusCore.Tests.Common.vcxproj.filters
NexusCore.Tests.Core/: NexusCore.Tests.Core.cpp  NexusCore.Tests.Core.vcxproj  NexusCore.Tests.Core.vcxproj.filters
NexusCore.Tests.Networking/: NexusCore.Tests.Networking.cpp  NexusCore.Tests.Networking.vcxproj  NexusCore.Tests.Networking.vcxproj.filters
Server/: AdminWebServer.cpp  AdminWebServer.h  Server.h  Server.vcxproj  Server.vcxproj.filters
